--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -140,6 +140,11 @@ OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resourc
 OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.daybed_mat
 OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat.throwrug_mat
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_legs_mat.coffee_table_legs_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat.coffee_table_top_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat.bulb_base_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat.bulb_filament_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1457,15 +1462,15 @@ MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 PreviewMaterial.PhysicalMaterial=True
-PreviewMaterial.Material=False
+PreviewMaterial.Material=True
 PreviewMaterial.PhysicalMaterialMask=True
 PreviewMaterial.Translucency=True
 PreviewMaterial.TranslucencySelfShadowing=True
 PreviewMaterial.Usage=True
 PreviewMaterial.Mobile=True
-PreviewMaterial.ForwardShading=False
+PreviewMaterial.ForwardShading=True
 PreviewMaterial.Group Sorting=True
-PreviewMaterial.PostProcessMaterial=False
+PreviewMaterial.PostProcessMaterial=True
 PreviewMaterial.Refraction=True
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
@@ -1869,6 +1874,11 @@ EditPivotToolActionPropertySet.BoxPositions=True
 MaterialExpressionReroute.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat.bulb_base_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp.floorlamp;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat.coffee_table_top_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_legs_mat.coffee_table_legs_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer_mat.coffee_table_drawer_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_base_mat.coffee_table_base_mat;
@@ -1884,11 +1894,6 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test.test;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed.daybed;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_daybed_daybed_back.daybed_daybed_daybed_back;
 RecentlyPlaced=/Script/Engine.RuntimeVirtualTextureVolume;/Engine/Transient.ActorFactoryRuntimeVirtualTextureVolume_0
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass.Grass;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Brown.MI_Solid_Brown;
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Green.MI_Solid_Green;
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1982,26 +1987,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem7=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem8=/Game/StarterContent/Maps/StarterMap
-MRUItem9=/Game/OurProject/Maps/CabinInWoods
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_S
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_G
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_S
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_G
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem11=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem12=/Game/StarterContent/Maps/StarterMap
+MRUItem13=/Game/OurProject/Maps/CabinInWoods
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2155,6 +2160,7 @@ FbxImportUI.Material=False
 FbxImportUI.Mesh=False
 FbxImportUI.Miscellaneous=False
 FoliageType_InstancedStaticMesh.Painting=True
+PreviewMaterial.Material=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
