daybed window frame
its too glossy and the glass needs to be revisited

--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -145,6 +145,7 @@ OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat.bulb_filament_mat
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -194,9 +195,9 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
-PreviewMaterial="\"Object\" "
-Material="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -322,6 +323,10 @@ InteractiveToolPropertySet="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 MaterialExpressionReroute="\"Object\" "
 MaterialExpressionRerouteBase="\"Object\" "
+SimplifyMeshToolProperties="\"Object\" "
+MeshConstraintProperties="\"Object\" "
+MeshStatisticsProperties="\"Object\" "
+MeshElementsVisualizerProperties="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1872,8 +1877,16 @@ SkyLight.Actor=True
 EditPivotToolProperties.Options=True
 EditPivotToolActionPropertySet.BoxPositions=True
 MaterialExpressionReroute.MaterialExpression=True
+SimplifyMeshToolProperties.Options=True
+SimplifyMeshToolProperties.Display=True
+SimplifyMeshToolProperties.Remeshing=True
+MeshStatisticsProperties.MeshStatistics=True
+MeshElementsVisualizerProperties.MeshElementVisualization=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_windows.daybed_windows;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat.bulb_base_mat;
@@ -1891,9 +1904,6 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.dayb
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat.throwrug_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2.test2;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test.test;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed.daybed;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_daybed_daybed_back.daybed_daybed_daybed_back;
-RecentlyPlaced=/Script/Engine.RuntimeVirtualTextureVolume;/Engine/Transient.ActorFactoryRuntimeVirtualTextureVolume_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1987,26 +1997,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem11=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem12=/Game/StarterContent/Maps/StarterMap
-MRUItem13=/Game/OurProject/Maps/CabinInWoods
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem13=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem14=/Game/StarterContent/Maps/StarterMap
+MRUItem15=/Game/OurProject/Maps/CabinInWoods
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
