--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -327,6 +327,10 @@ SimplifyMeshToolProperties="\"Object\" "
 MeshConstraintProperties="\"Object\" "
 MeshStatisticsProperties="\"Object\" "
 MeshElementsVisualizerProperties="\"Object\" "
+MaterialExpressionSubtract="\"Object\" "
+MaterialExpressionDoubleVectorParameter="\"Object\" "
+MaterialExpressionComposite="\"Object\" "
+MaterialExpressionPinBase="\"Object\" \"Object.ReroutePins.ReroutePins[0]\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1882,6 +1886,13 @@ SimplifyMeshToolProperties.Display=True
 SimplifyMeshToolProperties.Remeshing=True
 MeshStatisticsProperties.MeshStatistics=True
 MeshElementsVisualizerProperties.MeshElementVisualization=True
+MaterialExpressionSubtract.MaterialExpressionSubtract=True
+MaterialExpressionSubtract.MaterialExpression=True
+MaterialExpressionDoubleVectorParameter.General=True
+MaterialExpressionDoubleVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionDoubleVectorParameter.MaterialExpression=True
+MaterialExpressionComposite.General=True
+MaterialExpressionComposite.MaterialExpression=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame;
