--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,17 +135,6 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_base_mat.coffee_table_base_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer_mat.coffee_table_drawer_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.daybed_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat.throwrug_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_legs_mat.coffee_table_legs_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat.coffee_table_top_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat.bulb_base_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat.bulb_filament_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -162,7 +151,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 [RootWindow]
 ScreenPosition=X=339.000 Y=127.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -182,7 +171,7 @@ WorldSettings=
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -331,13 +320,17 @@ MaterialExpressionSubtract="\"Object\" "
 MaterialExpressionDoubleVectorParameter="\"Object\" "
 MaterialExpressionComposite="\"Object\" "
 MaterialExpressionPinBase="\"Object\" \"Object.ReroutePins.ReroutePins[0]\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BrushComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
-GenericImport=E:/2130GFS Serious Games/props/bedroom/props/daybed/daybed.fbx
+GenericImport=E:/2130GFS Serious Games/props/bedroom/props/coffee_table/rustic_coffee_table.fbx
 GenericExport=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 GenericOpen=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 GenericSave=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1274,7 +1267,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1349,6 +1342,32 @@ ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
+ContentBrowserTab3.SourcesExpanded=True
+ContentBrowserTab3.Locked=False
+ContentBrowserTab3.FavoritesAreaExpanded=False
+ContentBrowserTab3.PathAreaExpanded=True
+ContentBrowserTab3.CollectionAreaExpanded=False
+ContentBrowserTab3.FavoritesSearchAreaExpanded=False
+ContentBrowserTab3.PathSearchAreaExpanded=False
+ContentBrowserTab3.CollectionSearchAreaExpanded=False
+ContentBrowserTab3.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab3.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab3.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab3.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab3.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab3.ActiveTypeFilters=
+ContentBrowserTab3.EnabledTypeFilters=
+ContentBrowserTab3.ActiveFrontendFilters=
+ContentBrowserTab3.EnabledFrontendFilters=
+ContentBrowserTab3.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp
+ContentBrowserTab3.PluginFilters=
+ContentBrowserTab3.Favorites.SelectedPaths=
+ContentBrowserTab3.SelectedCollections=
+ContentBrowserTab3.ExpandedCollections=
+ContentBrowserTab3.ThumbnailSize=2
+ContentBrowserTab3.CurrentViewType=1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1893,6 +1912,55 @@ MaterialExpressionDoubleVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionDoubleVectorParameter.MaterialExpression=True
 MaterialExpressionComposite.General=True
 MaterialExpressionComposite.MaterialExpression=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Global Illumination=True
+PostProcessVolume.Reflections=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.Film Grain=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.HLOD=True
+PostProcessVolume.WorldPartition=True
+PostProcessVolume.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame;
@@ -1919,7 +1987,6 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test.test;
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
@@ -2064,6 +2131,16 @@ MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
 /Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G.yellowflower_G=1
 /Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S.yellowflower_S=1
 /Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst.flower_material_Inst=1
+/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_base_mat.coffee_table_base_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer_mat.coffee_table_drawer_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_legs_mat.coffee_table_legs_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat.coffee_table_top_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat.bulb_base_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat.bulb_filament_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
