--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,7 +134,8 @@ GridEnabled=False
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -324,6 +325,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1267,7 +1269,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1368,6 +1370,8 @@ ContentBrowserTab3.SelectedCollections=
 ContentBrowserTab3.ExpandedCollections=
 ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1961,11 +1965,24 @@ SkyAtmosphere.Activation=True
 SkyAtmosphere.Cooking=True
 SkyAtmosphere.Replication=True
 SkyAtmosphere.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_windows.daybed_windows;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/windows/daybed_window_frame.daybed_window_frame;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/windows/window_glass_mat.window_glass_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/windows/daybed_windows.daybed_windows;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat.bulb_base_mat;
@@ -1982,11 +1999,11 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G.
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.daybed_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat.throwrug_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2.test2;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test.test;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
@@ -2075,26 +2092,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
-MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem13=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem14=/Game/StarterContent/Maps/StarterMap
-MRUItem15=/Game/OurProject/Maps/CabinInWoods
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem14=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem15=/Game/StarterContent/Maps/StarterMap
+MRUItem16=/Game/OurProject/Maps/CabinInWoods
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2141,6 +2158,7 @@ MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
 /Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat=1
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat=1
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame=1
+/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -2259,6 +2277,7 @@ FbxImportUI.Mesh=False
 FbxImportUI.Miscellaneous=False
 FoliageType_InstancedStaticMesh.Painting=True
 PreviewMaterial.Material=False
+StaticMeshActor.Materials=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
